:rocket: Multi-core and I/O stack Optimization

--- a/doc/编译指南.md
+++ b/doc/编译指南.md
@@ -1,36 +1,80 @@
 # efuse 与依赖的编译
 
 ## efuse
-
+sudo -i
+cd ../lib
+rm -rf libbpf.so 
+rm -rf libbpf.so.1
+rm -rf libbpf.so.1.6.0 
+rm -rf libextfuse.so
+rm -rf libbpf.a
+cp /home/made/FastPoke-proj/efuse/.output/libbpf.so /lib
+cp /home/made/FastPoke-proj/efuse/.output/libbpf.so.1 /lib
+cp /home/made/FastPoke-proj/efuse/.output/libbpf.so.1.6.0 /lib
+cp /home/made/FastPoke-proj/efuse/.output/libextfuse.so /lib
+cp /home/made/FastPoke-proj/efuse/.output/libbpf.a /lib
 1. 进入efuse文件夹
 2. 运行`make -j12`
-3. 执行`cp ./output/extfuse.bpf.o /tmp`
+3. 执行`cp ./.output/extfuse.bpf.o /tmp`
 
 ## libfuse
-
+sudo rm -rf /usr/local/lib/libfuse.*
+sudo rm -rf /usr/local/include/fuse*
+rm -rf build
 1. `mkdir build`
 2. `cd build`
+export EXTFUSE_REPO_PATH="$HOME/FastPoke-proj/libfuse"
 3. `meson .. setup`
 4. `ninja`
 5. `sudo ninja install`
+cd ..
 
 ## linux
-
+cd linux
+make menuconfig
 1. `sudo make -j12`
 2. `sudo make headers_install`
-3. `sudo make moudles_install`
-4. `sudo make insatll`
+3. `sudo make modules_install`
+4. `sudo make install`
+sudo update-grub
 5. `reboot`
 6. 选择内核6.5.0+
 
 ## StackFS
 
-1. 配置`~/.bashrc`（或自己的配置文件）
+1. 配置` `（或自己的配置文件）
 ``` shell
+vi ~/.bashrc
 export EXTFUSE_REPO_PATH="$HOME/FastPoke-proj/efuse"
 export LIB_PATH="$HOME/FastPoke-proj/efuse"
 ```
 
 2. make
 3. 可选：`chmod +x test.sh`
-4. `./test.sh`
+4. `sudo ./test.sh`
+cd ./StackFS/tmp/to
+
+echo "hello" > hello.txt失败
+bpf打印sudo cat /sys/kernel/debug/tracing/trace_pipe
+sudo bpftool prog show
+sudo bpftool map dump name attr_map
+llvm-objdump -t ./.output/extfuse.bpf.o | grep fuse_main_handler
+内核调试
+sudo dmesg -T | grep "fuse"
+sudo dmesg -T | grep "aaa"
+sudo dmesg -T | grep "bbb"
+sudo dmesg -T | grep "ccc"
+sudo dmesg -T | grep "0x"
+sudo dmesg -T | tail -100
+objdump -S hello.o > hello.asm
+rm -rf 目录名字
+监控用户守护进程具体请求pid
+ps aux | grep StackFS
+sudo lsof ../FastPoke-proj/StackFS/tmp/from 
+##可唤醒进程查看问题
+ps -o pid,ppid,state,tty,time,cmd -p pid
+打印等待fuse完成请求线程数
+sudo cat /sys/fs/fuse/connections/52/waiting
+
+
+sudo fio --output=/home/made/FastPoke-proj/fio_test/rfusetestbpfread1 --name=rfusetestbpfread1 --directory=/home/made/FastPoke-proj/StackFS/tmp/to --rw=randrw --rwmixread=70 --bs=4K --size=100M --numjobs=8 --filesize=512K --nrfiles=100 --time_based --runtime=30 --ioengine=libaio --iodepth=16 --direct=1 --group_reporting
