--- a/doc/编译指南.md
+++ b/doc/编译指南.md
@@ -78,3 +78,6 @@ sudo cat /sys/fs/fuse/connections/52/waiting
 
 
 sudo fio --output=/home/made/FastPoke-proj/fio_test/rfusetestbpfread1 --name=rfusetestbpfread1 --directory=/home/made/FastPoke-proj/StackFS/tmp/to --rw=randrw --rwmixread=70 --bs=4K --size=100M --numjobs=8 --filesize=512K --nrfiles=100 --time_based --runtime=30 --ioengine=libaio --iodepth=16 --direct=1 --group_reporting
+
+fio  --name=test --filename=/home/made/FastPoke-proj/efuse/StackFS/tmp/to/testfile --rw=randrw --rwmixread=70 --bs=4K --size=1G --io_size=128M --numjobs=4 --iodepth=32 --direct=1 --ioengine=libaio --runtime=0 --time_based=0 --group_reporting
+
